fixed extra horizontal padding on mobile/tablet for resources page
Earlier, the columns was causing an overflow in the x-axis on mobile due to padding, and this made it horizontally scrollable on mobile. This commit fixes this by using a <section>, which adds it's own padding but solves the issue.

--- a/styles.scss
+++ b/styles.scss
@@ -220,7 +220,7 @@ footer {
 #resources {
 
     .columns{
-        padding: 64px;
+        padding: 32px;
     }
 
 }
